------------
-- 2.2.1 --
------------

* Backend:
	* Brasero style checksums support was added (#575825)
	* bugs with virtual packages for languages packs were solved
	  (#580578, #525635)
	* workarout for portuguese (pt_PT) language management was implemented
	  (#582200)

------------
-- 2.2.0 --
------------

* Backend:
	* joliet-long option was added to mkisofs
	* uck-remaster-pack-iso support for live-cd description was added
	  and can contain spaces (thanks to Wolf Geldmacher).
	* uck-remaster-pack-iso ISO file argument can now be a path name, too.
	  The ISO is still generated in remaster-new-files but will be moved
	  to the new path (thanks to Wolf Geldmacher).
    * uck-remaster-pack-iso md5sum now throws a fatal error
      (thanks to Wolf Geldmacher).
    * uck-remaster-chroot-rootfs arguments (cmd, remaster-home) have been
      swapped (now it is "remaster-home" "cmd"). This aligns the command with
        (a) almost all of the other uck-remaster commands that take remaster-home 
            as first argument
        (b) aligns the command with the chroot built-in shell command
	    (c) allows to pass additional arguments to the command executed in
	        the chroot environment
	  (thanks to Wolf Geldmacher).
    * uck-remaster reflects swap of $1<>$2 for uck-remaster-chroot-rootfs
      (thanks to Wolf Geldmacher).
    * uck-remaster-clean-all was added (thanks to Wolf Geldmacher)
    * some man files were updated
    * remaster-live-cd.sh was partially rewritten to handle mountpoints in a
      better way, removing the unused (now) chroot_rootfs function and some
      minor things (thanks to Wolf Geldmacher)
    * a bug with uck-remaster handling external customization-scripts dir
      was solved (#547260)
    * langlist was updated to lucid

------------
-- 2.0.12 --
------------

* GUI:
	* splash notes were updated
	* a new configuration screen was added to allow selecting which